Spacing changes and madatory star fixing

--- a/webadmin/src/app/cms-library/cms-library.component.css
+++ b/webadmin/src/app/cms-library/cms-library.component.css
@@ -72,8 +72,8 @@
 .tab-section a{
 	display: block;
     border: none;
-    color: #697380;
-    font-weight: 600;
+    color: #73737B;
+    /*font-weight: 600;*/
 }
 .tab-section .nav-tabs{
 	background-color: #fff;
